@@ -24,6 +24,7 @@ WinMerge 2.13.21
   Bugfix: Keeps verifing path even turned off in options (#3111581)
   Bugfix: Crash after deleting text (#3109521)
   Bugfix: Added EOL chars between copied file/path names (#2817546)
+  Bugfix: Created new matching folder to wrong folder (#2890961)
 
 WinMerge 2.13.20 - 2010-10-20 (r7319)
   Add missing keywords to Pascal highlighter (#2834192)
